[gd_scene load_steps=8 format=3 uid="uid://c8u8pd5xfvt8q"]

[ext_resource type="Script" path="res://src/player/player_character.gd" id="1_yjk2t"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_8f7vx"]
radius = 0.4
height = 1.8

[sub_resource type="CapsuleMesh" id="CapsuleMesh_lfmyv"]
radius = 0.4
height = 1.8

[sub_resource type="BoxMesh" id="BoxMesh_0rrxm"]
size = Vector3(0.2, 0.1, 0.4)

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_xfvt8"]
radius = 0.5
height = 2.0

[sub_resource type="BoxShape3D" id="BoxShape3D_b83jk"]
size = Vector3(1, 0.5, 1)

[sub_resource type="Animation" id="Animation_tb81p"]
resource_name = "idle"
length = 1.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MeshInstance3D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, 0.02, 0), Vector3(0, 0, 0)]
}

[node name="PlayerCharacter" type="CharacterBody3D" groups=["player"]]
collision_layer = 2
collision_mask = 1
script = ExtResource("1_yjk2t")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.9, 0)
shape = SubResource("CapsuleShape3D_8f7vx")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.9, 0)
mesh = SubResource("CapsuleMesh_lfmyv")

[node name="HeadMesh" type="MeshInstance3D" parent="MeshInstance3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.7, 0.2)
mesh = SubResource("BoxMesh_0rrxm")

[node name="CameraPivot" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 0)

[node name="Camera3D" type="Camera3D" parent="CameraPivot"]
transform = Transform3D(1, 0, 0, 0, 0.939693, 0.34202, 0, -0.34202, 0.939693, 0, 1, 3)
current = true

[node name="WeaponPivot" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.4, 0.9, 0)

[node name="HurtBox" type="Area3D" parent="." groups=["player_hurt_box"]]
collision_layer = 16
collision_mask = 32

[node name="CollisionShape3D" type="CollisionShape3D" parent="HurtBox"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.9, 0)
shape = SubResource("CapsuleShape3D_xfvt8")

[node name="HitBox" type="Area3D" parent="." groups=["player_hit_box"]]
collision_layer = 32
collision_mask = 16

[node name="CollisionShape3D" type="CollisionShape3D" parent="HitBox"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.9, 0.7)
shape = SubResource("BoxShape3D_b83jk")
disabled = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "idle"
anims/idle = SubResource("Animation_tb81p")

[node name="StaminaTimer" type="Timer" parent="."]
wait_time = 0.1
autostart = true 